[build-system]
requires = ["setuptools", "pkgconfig"]
build-backend = "setuptools.build_meta"

[project]
name = "python-nss"
description = "Python bindings for Network Security Services (NSS) and Netscape Portable Runtime (NSPR)"
readme = "README"

# version is defined in src/__init__.py and read in via setup.cfg
# license is a SPDX string in setup.cfg which follows PEP-639 (the future?) instead of PEP-621 (the now)
dynamic = ["version", "license"]

[[project.authors]]
name = "John Dennis"
email = "jdennis@redhat.com"

[project.urls]
homepage = "http://www.mozilla.org/projects/security/pki/python-nss"
